crates/ftui-core/tests/compile_fail/raw_cannot_enable_mouse.stderr
error[E0599]: no method named `enable_mouse` found for struct `ftui_core::mode_typestate::TerminalMode<1>` in the current scope
 --> tests/compile_fail/raw_cannot_enable_mouse.rs:6:9
  |
6 |     raw.enable_mouse();
  |         ^^^^^^^^^^^^
  |
help: there is a method `has_mouse` with a similar name
  |
6 -     raw.enable_mouse();
6 +     raw.has_mouse();
  |
